--- a/src/styles/marquee.css
+++ b/src/styles/marquee.css
@@ -20,6 +20,6 @@
     }
 
     100% {
-        transform: translateX(calc(-100% - theme('spacing.4')));
+        transform: translateX(calc(-100% - var(--spacing) * 4));
     }
 }
