--- a/src/styles/testimonials.css
+++ b/src/styles/testimonials.css
@@ -1,18 +1,12 @@
-@import 'swiper/css';
-@import 'swiper/css/a11y';
-@import 'swiper/css/effect-fade';
-@import 'swiper/css/pagination';
-@import 'swiper/css/autoplay';
-
 .testimonials {
-    @screen sm {
+    @media (width >= 640px) {
         /* Match .page-container, but without mobile padding */
         padding-left: 60px;
         padding-right: 60px;
     }
 
     .swiper-pagination-bullet-active {
-        background-color: theme('colors.gray.800');
+        background-color: var(--color-gray-800);
     }
 
     .particles {
@@ -28,7 +22,7 @@
     .swiper-wrapper {
         background-color: white;
 
-        @screen sm {
+        @media (width >= 640px) {
             border-radius: 1rem;
         }
     }
