--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -1,4 +1,4 @@
-.faq {
+.expandable-faq {
     p {
         margin-bottom: 1em;
     }
@@ -12,7 +12,7 @@
     }
 }
 
-.faq-item {
+.expandable-faq-item {
     background-color: rgba(0, 0, 0, .03);
 
     &:hover,
