Componentize CTA, ContactButton, Navlink; move FAQ to new page; add home navbar and adjust intro layout; Update link styles

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,7 +31,7 @@ body {
   padding-right: 10px;
   position: relative;
 
-  @media (width >= 640px) {
+  @media (width >=640px) {
     padding-left: 60px;
     padding-right: 60px;
   }
@@ -40,7 +40,7 @@ body {
 .page-container-bottom-padding {
   padding-bottom: 40px;
 
-  @media (width >= 640px) {
+  @media (width >=640px) {
     padding-bottom: 100px;
   }
 }
@@ -49,14 +49,12 @@ body {
   --color-1: hsl(212, 100%, 92%);
   --color-2: hsl(203, 100%, 95%);
   animation: bg-slide 18s linear infinite;
-  background: linear-gradient(
-    to right,
-    var(--color-1) 0%,
-    var(--color-1) 2%,
-    var(--color-2) 50%, 
-    var(--color-1) 98%,
-    var(--color-1) 100%
-  );
+  background: linear-gradient(to right,
+      var(--color-1) 0%,
+      var(--color-1) 2%,
+      var(--color-2) 50%,
+      var(--color-1) 98%,
+      var(--color-1) 100%);
   background-size: 500% 100%;
   z-index: 0;
 }
@@ -65,24 +63,8 @@ body {
   from {
     background-position: 0% 0%;
   }
+
   to {
     background-position: -500% 0%;
-  }
-}
-
-.btn {
-  background: linear-gradient(133deg, hsl(175, 100%, 70%), hsl(169, 94%, 63%));
-  border: 1px solid #20e9c3;
-  display: inline-block;
-  letter-spacing: .01em;
-  padding: .70em .75em .75em .75em;
-  transition: background 1s ease-in-out;
-  text-decoration: none;
-  font-weight: bold;
-
-  &:hover,
-  &:focus {
-    background: linear-gradient(133deg, hsl(175, 100%, 80%), hsl(169, 94%, 68%));
-    color: var(--color-gray-700);
   }
 }
